--- a/recognizer.html
+++ b/recognizer.html
@@ -17,10 +17,18 @@
 			var recognizer = new SpeechRecognition();
 			recognizer.continuous = true;
 
+
+
 			recognizer.addEventListener('result', function(event) {
+				var result;
 				for (var i = event.resultIndex; i <  event.results.length; i++) {	
+					// Each specific event is a separate string in here; it does not divide up by words. 
 					console.log(event.results[i][0].transcript);
+					result = event.results[i][0].transcript.split(" ");
+					console.log(result);
+					// now, pass this into a function that does fun stuff and compares this shit to possible responses. 
 				}
+
 			});
 
 			// Starts the recording when the play button is clicked
@@ -39,6 +47,12 @@
 				recognizer.stop();
 				console.log('Stopped');
 			});
+
+			function getResponse (str) {
+				/// RESPONSE PHRASES WE WANT TO GENERATE:
+
+				
+			}
 
 		</script>
 	</body>
