Determine type of question

--- a/recognizer.html
+++ b/recognizer.html
@@ -7,6 +7,7 @@
   <body>
     <button type="button" id="button-play" class="button">GO</button>
     <button type="button" id="button-stop" class="button">STOP</button>
+    <script src="dictionary.js"></script>
     <script src="response.js"></script>
     <script src="main.js"></script>
   </body>
