--- a/recognizer.html
+++ b/recognizer.html
@@ -7,8 +7,14 @@
   <body>
     <button type="button" id="button-play" class="button">GO</button>
     <button type="button" id="button-stop" class="button">STOP</button>
+    <div>
+      <p id="query"> Query: </p>
+      <p id="response">Response: </p>
+    </div>
     <script src="dictionary.js"></script>
     <script src="response.js"></script>
     <script src="main.js"></script>
+
+
   </body>
 </html>
